--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "axios": "^1.3.5",
+    "react-hook-form": "^7.43.9",
+    "joi": "^17.9.1",
+    "@hookform/resolvers": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
