--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "axios": "0.27.2"
+    "axios": "0.27.2",
+    "react-hook-form": "^7.43.9",
+    "@hookform/resolvers": "^3.0.1",
+    "joi": "^17.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
