--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.11.0",
+    "react-redux": "^8.0.5",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
