--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "axios": "0.27.2",
-    "react-router-dom": "^6.10.0"
+    "axios": "^1.4.0",
+    "react-router-dom": "^6.10.0",
+    "react-redux": "^8.0.5",
+    "@reduxjs/toolkit": "^1.9.5",
+    "react-hook-form": "^7.43.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=None react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
