--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-router-dom": "^6.10.0",
     "react-redux": "^8.0.5",
     "@reduxjs/toolkit": "^1.9.5",
-    "react-hook-form": "^7.43.9"
+    "react-hook-form": "^7.43.9",
+    "joi": "^17.9.2",
+    "@hookform/resolvers": "^3.1.0"
   },
   "scripts": {
     "start": "BROWSER=None react-scripts start",
