--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react-hook-form": "^7.43.9",
     "joi": "^17.9.2",
-    "@hookform/resolvers": "^3.1.0"
+    "@hookform/resolvers": "^3.1.0",
+    "history": "^5.3.0"
   },
   "scripts": {
     "start": "BROWSER=None react-scripts start",
